# autotools-cpp-skeleton

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac
src/: main.cpp
